GraphGenerator/src/de/alexhein/graphgenerator/parsers/fopcl/FopclgrammarParser.java
package de.alexhein.graphgenerator.parsers.fopcl;


// Generated from Fopclgrammar.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FopclgrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__20=1, T__19=2, T__18=3, T__17=4, T__16=5, T__15=6, T__14=7, T__13=8, 
		T__12=9, T__11=10, T__10=11, T__9=12, T__8=13, T__7=14, T__6=15, T__5=16, 
		T__4=17, T__3=18, T__2=19, T__1=20, T__0=21, UPPERC=22, LOWERC=23, PROB=24, 
		WS=25, LINE_COMMENT=26, COMMENT=27;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'=>'", "','", "'+'", "'['", "'or'", "'*'", 
		"'('", "'not'", "'<'", "'='", "'<=>'", "'!='", "';'", "'>'", "'{'", "'and'", 
		"'}'", "'|'", "'!'", "UPPERC", "LOWERC", "PROB", "WS", "LINE_COMMENT", 
		"COMMENT"
	};
	public static final int
		RULE_fopclsig = 0, RULE_sortdef = 1, RULE_consts = 2, RULE_preddef = 3, 
		RULE_sorts = 4, RULE_probcond = 5, RULE_constrs = 6, RULE_constr = 7, 
		RULE_neqconstr = 8, RULE_eqconstr = 9, RULE_cond = 10, RULE_concl = 11, 
		RULE_prem = 12, RULE_form = 13, RULE_implication = 14, RULE_disjunction = 15, 
		RULE_conjunction = 16, RULE_negation = 17, RULE_parentform = 18, RULE_atom = 19, 
		RULE_args = 20, RULE_var_id = 21, RULE_const_id = 22, RULE_pred_id = 23, 
		RULE_sort_id = 24, RULE_nequ = 25, RULE_coimplic = 26, RULE_implic = 27, 
		RULE_or = 28, RULE_and = 29, RULE_not = 30, RULE_equ = 31;
	public static final String[] ruleNames = {
		"fopclsig", "sortdef", "consts", "preddef", "sorts", "probcond", "constrs", 
		"constr", "neqconstr", "eqconstr", "cond", "concl", "prem", "form", "implication", 
		"disjunction", "conjunction", "negation", "parentform", "atom", "args", 
		"var_id", "const_id", "pred_id", "sort_id", "nequ", "coimplic", "implic", 
		"or", "and", "not", "equ"
	};

	@Override
	public String getGrammarFileName() { return "Fopclgrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public FopclgrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FopclsigContext extends ParserRuleContext {
		public ProbcondContext probcond(int i) {
			return getRuleContext(ProbcondContext.class,i);
		}
		public List<SortdefContext> sortdef() {
			return getRuleContexts(SortdefContext.class);
		}
		public List<ProbcondContext> probcond() {
			return getRuleContexts(ProbcondContext.class);
		}
		public PreddefContext preddef(int i) {
			return getRuleContext(PreddefContext.class,i);
		}
		public SortdefContext sortdef(int i) {
			return getRuleContext(SortdefContext.class,i);
		}
		public List<PreddefContext> preddef() {
			return getRuleContexts(PreddefContext.class);
		}
		public FopclsigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fopclsig; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitFopclsig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FopclsigContext fopclsig() throws RecognitionException {
		FopclsigContext _localctx = new FopclsigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fopclsig);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(64); sortdef();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UPPERC || _la==LOWERC) {
				{
				{
				setState(70); preddef();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==11) {
				{
				{
				setState(76); probcond();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortdefContext extends ParserRuleContext {
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Sort_idContext sort_id() {
			return getRuleContext(Sort_idContext.class,0);
		}
		public SortdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortdef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitSortdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortdefContext sortdef() throws RecognitionException {
		SortdefContext _localctx = new SortdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sortdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); sort_id();
			setState(83); match(12);
			setState(84); match(17);
			setState(85); consts();
			setState(86); match(19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstsContext extends ParserRuleContext {
		public Const_idContext const_id(int i) {
			return getRuleContext(Const_idContext.class,i);
		}
		public List<Const_idContext> const_id() {
			return getRuleContexts(Const_idContext.class);
		}
		public ConstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consts; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitConsts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstsContext consts() throws RecognitionException {
		ConstsContext _localctx = new ConstsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_consts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if (_la==LOWERC) {
				{
				setState(88); const_id();
				}
			}

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(91); match(4);
				setState(92); const_id();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreddefContext extends ParserRuleContext {
		public Pred_idContext pred_id() {
			return getRuleContext(Pred_idContext.class,0);
		}
		public SortsContext sorts() {
			return getRuleContext(SortsContext.class,0);
		}
		public PreddefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preddef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitPreddef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreddefContext preddef() throws RecognitionException {
		PreddefContext _localctx = new PreddefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_preddef);
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); pred_id();
				setState(99); match(9);
				setState(100); sorts();
				setState(101); match(2);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); pred_id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortsContext extends ParserRuleContext {
		public Sort_idContext sort_id(int i) {
			return getRuleContext(Sort_idContext.class,i);
		}
		public List<Sort_idContext> sort_id() {
			return getRuleContexts(Sort_idContext.class);
		}
		public SortsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sorts; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitSorts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortsContext sorts() throws RecognitionException {
		SortsContext _localctx = new SortsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sorts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if (_la==UPPERC) {
				{
				setState(106); sort_id();
				}
			}

			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(109); match(4);
				setState(110); sort_id();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProbcondContext extends ParserRuleContext {
		public ConstrsContext constrs() {
			return getRuleContext(ConstrsContext.class,0);
		}
		public TerminalNode PROB() { return getToken(FopclgrammarParser.PROB, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ProbcondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_probcond; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitProbcond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProbcondContext probcond() throws RecognitionException {
		ProbcondContext _localctx = new ProbcondContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_probcond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(11);
			setState(117); match(9);
			setState(118); cond();
			setState(119); match(2);
			setState(120); match(6);
			setState(121); match(PROB);
			setState(122); match(1);
			setState(123); constrs();
			setState(124); match(16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrsContext extends ParserRuleContext {
		public ConstrContext constr(int i) {
			return getRuleContext(ConstrContext.class,i);
		}
		public List<ConstrContext> constr() {
			return getRuleContexts(ConstrContext.class);
		}
		public ConstrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constrs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitConstrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrsContext constrs() throws RecognitionException {
		ConstrsContext _localctx = new ConstrsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constrs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(126); match(4);
				setState(127); constr();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrContext extends ParserRuleContext {
		public NeqconstrContext neqconstr() {
			return getRuleContext(NeqconstrContext.class,0);
		}
		public EqconstrContext eqconstr() {
			return getRuleContext(EqconstrContext.class,0);
		}
		public ConstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitConstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrContext constr() throws RecognitionException {
		ConstrContext _localctx = new ConstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constr);
		try {
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); neqconstr();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134); eqconstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeqconstrContext extends ParserRuleContext {
		public NequContext nequ() {
			return getRuleContext(NequContext.class,0);
		}
		public List<Var_idContext> var_id() {
			return getRuleContexts(Var_idContext.class);
		}
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Var_idContext var_id(int i) {
			return getRuleContext(Var_idContext.class,i);
		}
		public Const_idContext const_id() {
			return getRuleContext(Const_idContext.class,0);
		}
		public NeqconstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_neqconstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitNeqconstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NeqconstrContext neqconstr() throws RecognitionException {
		NeqconstrContext _localctx = new NeqconstrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_neqconstr);
		try {
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(137); var_id();
				setState(138); nequ();
				setState(139); const_id();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(141); const_id();
				setState(142); nequ();
				setState(143); var_id();
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(145); var_id();
				setState(146); nequ();
				setState(147); match(9);
				setState(148); consts();
				setState(149); match(2);
				}
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(151); match(9);
				setState(152); consts();
				setState(153); match(2);
				setState(154); nequ();
				setState(155); var_id();
				}
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(157); var_id();
				setState(158); nequ();
				setState(159); var_id();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqconstrContext extends ParserRuleContext {
		public EquContext equ() {
			return getRuleContext(EquContext.class,0);
		}
		public List<Var_idContext> var_id() {
			return getRuleContexts(Var_idContext.class);
		}
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Var_idContext var_id(int i) {
			return getRuleContext(Var_idContext.class,i);
		}
		public Const_idContext const_id() {
			return getRuleContext(Const_idContext.class,0);
		}
		public EqconstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqconstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitEqconstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqconstrContext eqconstr() throws RecognitionException {
		EqconstrContext _localctx = new EqconstrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_eqconstr);
		try {
			setState(187);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(163); var_id();
				setState(164); equ();
				setState(165); const_id();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(167); const_id();
				setState(168); equ();
				setState(169); var_id();
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(171); var_id();
				setState(172); equ();
				setState(173); match(9);
				setState(174); consts();
				setState(175); match(2);
				}
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(177); match(9);
				setState(178); consts();
				setState(179); match(2);
				setState(180); equ();
				setState(181); var_id();
				}
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(183); var_id();
				setState(184); equ();
				setState(185); var_id();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public PremContext prem() {
			return getRuleContext(PremContext.class,0);
		}
		public ConclContext concl() {
			return getRuleContext(ConclContext.class,0);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cond);
		try {
			setState(194);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189); concl();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(190); concl();
				setState(191); match(20);
				setState(192); prem();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConclContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public ConclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitConcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConclContext concl() throws RecognitionException {
		ConclContext _localctx = new ConclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_concl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196); form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PremContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public PremContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitPrem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PremContext prem() throws RecognitionException {
		PremContext _localctx = new PremContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_prem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198); form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public CoimplicContext coimplic(int i) {
			return getRuleContext(CoimplicContext.class,i);
		}
		public List<ImplicationContext> implication() {
			return getRuleContexts(ImplicationContext.class);
		}
		public List<CoimplicContext> coimplic() {
			return getRuleContexts(CoimplicContext.class);
		}
		public ImplicationContext implication(int i) {
			return getRuleContext(ImplicationContext.class,i);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); implication();
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==13) {
				{
				{
				setState(201); coimplic();
				setState(202); implication();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplicationContext extends ParserRuleContext {
		public List<ImplicContext> implic() {
			return getRuleContexts(ImplicContext.class);
		}
		public DisjunctionContext disjunction(int i) {
			return getRuleContext(DisjunctionContext.class,i);
		}
		public List<DisjunctionContext> disjunction() {
			return getRuleContexts(DisjunctionContext.class);
		}
		public ImplicContext implic(int i) {
			return getRuleContext(ImplicContext.class,i);
		}
		public ImplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implication; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitImplication(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplicationContext implication() throws RecognitionException {
		ImplicationContext _localctx = new ImplicationContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_implication);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209); disjunction();
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3) {
				{
				{
				setState(210); implic();
				setState(211); disjunction();
				}
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjunctionContext extends ParserRuleContext {
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public DisjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitDisjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DisjunctionContext disjunction() throws RecognitionException {
		DisjunctionContext _localctx = new DisjunctionContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_disjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218); conjunction();
			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 7) | (1L << 15))) != 0)) {
				{
				{
				setState(219); or();
				setState(220); conjunction();
				}
				}
				setState(226);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public List<NegationContext> negation() {
			return getRuleContexts(NegationContext.class);
		}
		public NegationContext negation(int i) {
			return getRuleContext(NegationContext.class,i);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitConjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_conjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(227); negation();
			setState(233);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 8) | (1L << 18))) != 0)) {
				{
				{
				setState(228); and();
				setState(229); negation();
				}
				}
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegationContext extends ParserRuleContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public ParentformContext parentform() {
			return getRuleContext(ParentformContext.class,0);
		}
		public NegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FopclgrammarVisitor ) return ((FopclgrammarVisitor<? extends T>)visitor).visitNegation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NegationContext negation() throws RecognitionException {
		NegationContext _localctx = new NegationContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_negation);
		try {
			setState(240);
			switch (_input.LA(1)) {
			case 10:
			case 21:
				enterOuterAlt(_localctx, 1);
				{
				setState(236); not();
				setState(237); parentform();
				}
				break;
			case 9:
			case UPPERC:
			case LOWERC:
				enterOuterAlt(_localctx, 2);
				{
				setState(239); parentform();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
